colors for firefox

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="msapplication-navbutton-color" content="#000000" />
+    <meta name="firefox-theme-color" content="#000000" />
     <meta
       name="description"
       content="Find the top assisted living, memory care &amp;amp; other senior living communities near you. Read reviews, get pricing &amp;amp; connect with a local Senior Living Advisor."
